--- a/App4/Resources/layout/Main.axml
+++ b/App4/Resources/layout/Main.axml
@@ -10,7 +10,8 @@
         android:layout_height="200dp"
         android:id="@+id/progressBar"
         android:layout_gravity="center"
-        android:layout_marginTop="50dp" />
+        android:layout_marginTop="50dp"
+        android:backgroundTint="#ff000000" />
     <EditText
         android:inputType="time"
         android:layout_width="200dp"
